# md-kroki

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs  render.rs
src/test/: mod.rs
src/test/basic/: output.md
src/test/embedded_in_document/: input.md  output.md
src/test/inline_md/: input.md  output.md
src/test/inline_xml/: input.md  output.md
src/test/reference_md/: input.md  output.md
src/test/reference_xml/: input.md  output.md
