[package]
name = "md-kroki"
version = "0.1.0"
edition = "2021"
description = "Render kroki diagrams inside markdown"
repository = "https://github.com/JoelCourtney/md-kroki"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
