[package]
name = "md-kroki"
version = "0.1.0"
edition = "2021"
description = "Render kroki diagrams inside markdown"
repository = "https://github.com/JoelCourtney/md-kroki"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
pulldown-cmark = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11.16", features = ["blocking"] }
sscanf = "0.4.0"
xmltree = "0.10.3"
futures = "0.3.28"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.27.0", default-features = false, features = ["full"] }
