[package]
name = "md-kroki"
version = "0.2.0"
edition = "2024"
description = "Render kroki diagrams inside markdown"
repository = "https://github.com/JoelCourtney/md-kroki"
license = "MIT OR Apache-2.0"
keywords = ["md", "markdown", "kroki", "diagram", "renderer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pulldown-cmark = { version = "0.13.0", default-features = false }
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
sscanf = "0.4.3"
xmltree = "0.11.0"
futures = "0.3.31"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.46.1", default-features = false, features = ["full"] }
tokio-test = "0.4.4"
